[package]
name = "not-to-do"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
dotenvy = "0.15.7"
sqlx = { version = "0.8.3", features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
] }
thiserror = "2.0.12"
mockall = "0.13.1"
serde = { version = "1.0.219", features = ["derive"] }
